# kafa

./: CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  VERSION  pyproject.toml  release-tooling.json  release.json
benchmarks/: run_delivery_integrity_outcome_benchmark.py  run_local_core_benchmark.py
examples/: forward-tests.md  full-project-flow.md
kafa/: __init__.py  artifact_subject.py  change_scope.py  cli.py  codex_app_server.py  evidence_summary.py  rehearsal.py  release.py  supply_chain.py  version.py
openspec/: config.yaml
tests/: legacy_schema_fixtures.py  run_isolated_install_smoke.py  test_admin_backup_recovery.py  test_advisory_fallbacks.py  test_agent_e2e_eval.py  test_agent_provider_lifecycle.py  test_agent_provider_reconcile.py  test_agent_runner.py  test_artifact_subject.py  test_change_scope.py  test_codex_fanout_export.py  test_codex_fanout_import.py  test_codex_hooks.py  test_cold_start_guided_loop.py  test_concise_operator_output.py  test_connector_exactly_once.py  test_connector_namespace_isolation.py  test_connector_resilience.py  test_control_plane_architecture.py  test_delivery_cycles.py  test_delivery_integrity_p0_contracts.py  test_delivery_integrity_p1_contracts.py  test_delivery_narrative_derivation.py  test_delivery_plan_verified_patch.py  test_dispatch_integration.py  test_dispatch_route_advice.py  test_dispatch_run_status.py  test_dispatch_scheduling.py  test_distribution_manifest.py  test_documentation_contract.py  test_evidence_summary.py  test_execution_validation.py  test_feature_freeze.py  test_fencing.py  (+43 more)
(+221 files in other folders)
